--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@remix-run/serve": "^2.12.0",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.5",
+    "remix-toast": "^1.2.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^2.12.0",
