--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8.4.47",
+    "prettier": "^3.3.3",
     "prisma": "^5.19.1",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.1.6",
